package tests.registry.requests;

import "service_protobufs/soa.proto";

import "service/protobufs/tests/simple_service/another_action.proto";
import "service/protobufs/tests/simple_service/exception_action.proto";
import "service/protobufs/tests/simple_service/paginated_action.proto";
import "service/protobufs/tests/simple_service/required_fields_action.proto";
import "service/protobufs/tests/simple_service/simple_action.proto";


message Simple {
    extend soa.ActionRequestParamsV1 {
        optional another_action.Request another_action = 101;
        optional simple_action.Request simple_action = 102;
        optional paginated_action.Request paginated_action = 103;
        optional exception_action.Request exception_action = 104;
        optional required_fields_action.Request required_fields_action = 105;
    }
}
